--- a/americaindex.html
+++ b/americaindex.html
@@ -9,11 +9,14 @@
 
 
 <body>
-]]
+<!--Top navigation bar -->
 <div class ="navbar">
 	<div >
 		<img class="navLogo" src = "https://static.spotapps.co/web/americanalasvegas--com/custom/logo.png">
 	</div>
+	
+	<div>
+		<ul  class="textInNavbar">
 	
 			<li><a>MENU</a></li>
 			<li><a>DRINKS</a></li>
