increased line height

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="aboutdiv">
 		<h1 style="text-align:center">ABOUT US</h1>
 		<img style =" width : 45% " src="https://static.spotapps.co/web/americanalasvegas--com/custom/title_decoration.png">
-		<p style="font-family: 'Montserrat', sans-serif" style="text-align:center line-height: 1.42857143">Americana brings incredible blends of various cultures to the<br> Desert Shores community in Las Vegas. The restaurant <br>offers fine dining with a blended cultural theme of <br>modern American cuisine. 
+		<p style="font-family: 'Montserrat', sans-serif" style="text-align:center; line-height: 21.42857143;">Americana brings incredible blends of various cultures to the<br> Desert Shores community in Las Vegas. The restaurant <br>offers fine dining with a blended cultural theme of <br>modern American cuisine. 
 		</p>
 	<button class="btnReadMore">READ MORE</button>
 	</div>
